# stock-data-system

./: .gitignore  AGENT.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  config.py  data_fetcher.py  db.py  fix_fcf.py  incremental.py  models.py  pyproject.toml  recalc_fcf.py  requirements.txt  scheduler.py  sync.py  sync_progress.sql  test_fcf.py  test_fcf_v2.py  validate.py
archive/: AGENT.md  api.py  data_fetcher.py  database.py  db_stats.py  models.py  recalc_fcf_parallel.py  recalc_fcf_v2.py  recalc_hk_only.py  scheduler.py  verify.py
core/: __init__.py  incremental.py  scheduler.py  validate.py
docs/: ARCHITECTURE.md  CAPABILITY_SPEC.md  CODE_REVIEW.md  DAILY_QUOTE_PLAN.md  DATA_QUALITY_REPORT.md  DEPLOY_OVERSEAS.md  DEV_GUIDELINES.md  DIVIDEND_PLAN.md  FIX_B_MISSING_FIELDS.md  FIX_C_TAG_MAPPINGS.md  INDUSTRY_PLAN.md  PHASE4_DEPLOYMENT.md  PHASE4_PROGRESS.md  PROJECT_MEMORY.md  QQ_QUOTE_FALLBACK_PLAN.md  QUANT_SYSTEM_PLAN.md  README.md  REVIEW_HISTORY.md  ROADMAP.md  SCHEDULER_DESIGN.md  SCHEMA.md  SEC_DATA_PITFALLS.md  SPEC.md  US_DAILY_QUOTE_PLAN.md  US_DATA_OVERVIEW.md  US_EDGAR_PLAN.md  [FIX] TTM计算修复方案.md  [US] DEPLOY_OVERSEAS.md
fetchers/: __init__.py  base.py  daily_quote.py  dividend.py  hk_financial.py  index_constituent.py  industry.py  share.py  stock_list.py  us_financial.py
frontend/: components.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
quant/: __init__.py
screener/: __main__.py  filters.py  query.py  report.py  scorer.py
scripts/: add_last_report_date.sql  add_market_check.sql  init_db.py  (+12 more)
(+410 files in other folders)
